# strobe

./: .gitignore  .gitmodules  AUTHORS  LICENSE  Makefile  insinf  run  tc  tca  tcb  tcbug  tcg  test-lint.sh
data/: cssom.idl  (+28 more)
javascript-trace/: JavaScriptTrace.cabal  constrs.js  constrs_cc.html  constrs_hacked.js  curConvert.html  curConvert_cc.js  flapjax.traced.js  jstrace  mouse3.html  nesting.html  nesting.js  nesting_cc.html  run  test1.html  test1_cc.html  test2_cc.html  tofile.html  tracecompile
javascript-trace/curConvert/: curConvert.html  curConvert.js  curConvert_cc.js
javascript-trace/data/: jstrace.js  traceview.js  tracewin.html
javascript-trace/gadgets/AnalogClock_cc/: 0_compiled.js  0_compiled_cc.js  gadget.gmanifest
javascript-trace/gadgets/Animations_cc/: gadget.gmanifest  jstrace.js  main.js  main.xml  main_cc.js
javascript-trace/gadgets/Calculator/: gadget.gmanifest  main.xml  scientific.js
javascript-trace/gadgets/Calculator_cc/: PROBLEMS.txt  hookggmenu.js  main.xml  scientific_cc.js
javascript-trace/gadgets/Countdown_cc/: gadget.gmanifest  main.js  main.xml  main_cc.js
javascript-trace/gadgets/DragDrop_cc/: INFO  gadget.gmanifest  jstrace.js  main.js  main.xml  main_cc.js
javascript-trace/gadgets/GoogleCalendar_cc/: gadget.gmanifest  hookggmenu.js  jstrace.js  main.xml  plugin.js  plugin_cc.js
javascript-trace/gadgets/HelloWorld_cc/: gadget.gmanifest  jstrace.js  main.js  main.xml  main_cc.js  traceview.js
javascript-trace/src/: JsTrace.hs
javascript-trace/tipofday/: tipofday.html
javascript-trace/weather/: weather.html
(+892 files in other folders)
