Name:           JavaScriptTrace
Version:        0.1
Cabal-Version:	>= 1.2.3
Copyright:      Copyright (c) 2009 Arjun Guha and Claudiu Saftoiu
License:        BSD3
License-file:   LICENSE
Author:         Arjun Guha, Claudiu Saftoiu
Maintainer:     Arjun Guha <arjun@cs.brown.edu>
Homepage:       http://www.cs.brown.edu/~arjun/
Stability:      provisional
Category:       Language
Build-Type:     Custom
Synopsis:       JavaScript tracing
Data-dir:       data
Data-Files: 
  jstrace.js
Description:
 
Executable jstrace
  Main-Is: JsTrace.hs
  Hs-Source-Dirs:
    src
  Build-Depends:
    base >= 4, mtl >= 1.1.0.1, WebBits >= 0.15, syb >= 0.1, parsec < 3
  ghc-options:
    -fwarn-incomplete-patterns
  Extensions:     
    Generics
